# jaxpe

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  _config.yml  conda-gpu.yml  conda.yml  fix_docs.py  fix_math.py  index.md  pyproject.toml  run_experiments.sh  run_phenomd_events.py  test_injections.xml  test_prior.json
_includes/: head_custom.html
claudemod/: priors.py
docs/: getting-started.md  gpry_fusion_design.md  installation.md  under_construction.md  under_construction_esigma.md  under_construction_fd.md
docs/api/: core.md  diagnostics.md  flows.md  gw.md  index.md  kernels.md  sampler.md
docs/jaxpe/: core.md  diagnostics.md  flows.md  gw.md  kernels.md  sampler.md
examples/: 00_pedagogical_tutorial.py  01_gaussian.py  02_multimodal_toys.py  03_gw_injection.py  04_gw150914.py  05_esigma_injection.py  06_phenomd_injection.py  07_route_comparison.py  07_td_higher_mode_route_comparison.py  08_fd_dominant_mode_route_comparison.py  08_phenomd_route_comparison.py  09_validate_injection_vs_dynesty.py  d4_timing_report.html  validate_injection_vs_dynesty.py
examples/figures/: make_d4_figures.py
examples/output/: gw_injection_seed42_samples.npy  phenomd_M10_surrogate_cpu.npz  phenomd_M10_surrogate_jax_cpu.npz  phenomd_M10_surrogate_jax_gpu.npz  phenomd_M20_gradient_cpu.npz  phenomd_M20_gradient_gpu.npz  phenomd_M20_surrogate_cpu.npz  phenomd_M20_surrogate_jax_cpu.npz  phenomd_M20_surrogate_jax_gpu.npz  phenomd_M30_gradient_cpu.npz  phenomd_M30_gradient_gpu.npz  phenomd_M30_surrogate_cpu.npz  phenomd_M30_surrogate_jax_cpu.npz  phenomd_M30_surrogate_jax_gpu.npz  phenomd_M3_surrogate_jax_gpu.npz  phenomd_M40_gradient_cpu.npz  phenomd_M40_gradient_gpu.npz  phenomd_M40_surrogate_cpu.npz  phenomd_M40_surrogate_jax_cpu.npz  phenomd_M40_surrogate_jax_gpu.npz  phenomd_M50_gradient_cpu.npz  phenomd_M50_gradient_gpu.npz  phenomd_M50_surrogate_cpu.npz  (+30 more)
jaxpe/: __init__.py
tests/: conftest.py  test_core.py  test_esigma.py  test_external_wrappers.py  test_fd_marginal.py  test_flow_sampler.py  test_gw.py  test_jax_acquisition.py  test_kernels.py  test_marginalized.py  test_multifidelity.py  test_surrogate.py
(+51 files in other folders)
